--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Defend the Window
     <div class="row">
       <div class="col-xs-12">
         <div class="content">
-          <img src="/img/defend.svg" alt="Defend the Window">
+          <img id="defend" src="/img/defend.svg" class="img-responsive" alt="Defend the Window">
         </div>
       </div>
       <div class="col-xs-12">
@@ -50,21 +50,28 @@ title: Defend the Window
         <div class="content">
           <p class="text-center"><small>Small Sticker<br>1.73” x 3”</small></p>
           <img src="/img/defend.svg" alt="Defend the Window sticker image">
-          <a href="https://www.stickermule.com/marketplace/16734-defend-the-window" class="btn btn-block" target="_blank">Buy this sticker</a>
+          <div class="text-center">
+            <a href="https://www.stickermule.com/marketplace/16734-defend-the-window" class="btn" target="_blank">Buy this sticker</a>
+          </div>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="content">
           <p class="text-center"><small>Large Sticker<br>1.73” x 3”</small></p>
           <img src="/img/defend.svg" alt="Defend the Window sticker image">
-          <a href="https://www.stickermule.com/marketplace/16734-defend-the-window" class="btn btn-block" target="_blank">Buy this sticker</a>
+          <div class="text-center">
+            <a href="https://www.stickermule.com/marketplace/16734-defend-the-window" class="btn" target="_blank">Buy this sticker</a>
+          </div>
+          
         </div>
       </div>
       <div class="col-sm-4">
         <div class="content">
           <p class="text-center"><small>Poster<br>1.73” x 3”</small></p>
           <img src="/img/defend.svg" alt="Defend the Window sticker image">
-          <a href="https://www.stickermule.com/marketplace/16734-defend-the-window" class="btn btn-block" target="_blank">Buy this poster</a>
+          <div class="text-center">
+            <a href="https://www.stickermule.com/marketplace/16734-defend-the-window" class="btn" target="_blank">Buy this poster</a>
+          </div>
         </div>
       </div>
     </div>
@@ -90,19 +97,25 @@ title: Defend the Window
       <div class="col-sm-4">
         <div class="content">
           <img src="/img/defend.svg" alt="Defend the window">
-          <a href="#" class="btn btn-block" target="_blank">Download this sticker</a>
+          <div class="text-center">
+            <a href="#" class="btn" target="_blank">Download this sticker</a>
+          </div>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="content">
           <img src="/img/defend.svg" alt="Defend the window">
-          <a href="#" class="btn btn-block" target="_blank">Download this sticker</a>
+          <div class="text-center">
+            <a href="#" class="btn" target="_blank">Download this sticker</a>
+          </div>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="content">
           <img src="/img/defend.svg" alt="Defend the window">
-          <a href="#" class="btn btn-block" target="_blank">Download this poster</a>
+          <div class="text-center">
+            <a href="#" class="btn" target="_blank">Download this poster</a>
+          </div>
         </div>
       </div>
     </div>
