--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Defend the Window
     <div class="row">
       <div class="col-xs-12">
         <div class="content">
-          <img id="defend" src="/img/defend.svg" class="img-responsive" alt="Defend the Window">
+          <img class="img-responsive" id="defend" src="/img/defend.svg" class="img-responsive" alt="Defend the Window">
         </div>
       </div>
       <div class="col-xs-12">
@@ -49,7 +49,7 @@ title: Defend the Window
       <div class="col-sm-4">
         <div class="content">
           <p class="text-center"><small>Small Sticker<br>1.73” x 3”</small></p>
-          <img src="/img/defend.svg" alt="Defend the Window sticker image">
+          <img class="img-responsive" src="/img/defend.svg" alt="Defend the Window sticker image">
           <div class="text-center">
             <a href="https://www.stickermule.com/marketplace/16734-defend-the-window" class="btn" target="_blank">Buy this sticker</a>
           </div>
@@ -58,7 +58,7 @@ title: Defend the Window
       <div class="col-sm-4">
         <div class="content">
           <p class="text-center"><small>Large Sticker<br>1.73” x 3”</small></p>
-          <img src="/img/defend.svg" alt="Defend the Window sticker image">
+          <img class="img-responsive" src="/img/defend.svg" alt="Defend the Window sticker image">
           <div class="text-center">
             <a href="https://www.stickermule.com/marketplace/16734-defend-the-window" class="btn" target="_blank">Buy this sticker</a>
           </div>
@@ -68,7 +68,7 @@ title: Defend the Window
       <div class="col-sm-4">
         <div class="content">
           <p class="text-center"><small>Poster<br>1.73” x 3”</small></p>
-          <img src="/img/defend.svg" alt="Defend the Window sticker image">
+          <img class="img-responsive" src="/img/defend.svg" alt="Defend the Window sticker image">
           <div class="text-center">
             <a href="https://www.stickermule.com/marketplace/16734-defend-the-window" class="btn" target="_blank">Buy this poster</a>
           </div>
@@ -96,7 +96,8 @@ title: Defend the Window
     <div class="row">
       <div class="col-sm-4">
         <div class="content">
-          <img src="/img/defend.svg" alt="Defend the window">
+          <p class="text-center"><small>Small Sticker<br>1.73” x 3”</small></p>
+          <img class="img-responsive" src="/img/defend.svg" alt="Defend the window">
           <div class="text-center">
             <a href="#" class="btn" target="_blank">Download this sticker</a>
           </div>
@@ -104,7 +105,8 @@ title: Defend the Window
       </div>
       <div class="col-sm-4">
         <div class="content">
-          <img src="/img/defend.svg" alt="Defend the window">
+          <p class="text-center"><small>Large Sticker<br>1.73” x 3”</small></p>
+          <img class="img-responsive" src="/img/defend.svg" alt="Defend the window">
           <div class="text-center">
             <a href="#" class="btn" target="_blank">Download this sticker</a>
           </div>
@@ -112,16 +114,17 @@ title: Defend the Window
       </div>
       <div class="col-sm-4">
         <div class="content">
-          <img src="/img/defend.svg" alt="Defend the window">
+          <p class="text-center"><small>Poster<br>1.73” x 3”</small></p>
+          <img class="img-responsive" src="/img/defend.svg" alt="Defend the window">
           <div class="text-center">
             <a href="#" class="btn" target="_blank">Download this poster</a>
           </div>
         </div>
       </div>
     </div>
-    <div class="row">
+    <div id="social" class="row">
       <div class="content">
-        <img src="http://placehold.it/730x255" class="img-responsive" alt="">
+        <img class="img-responsive" src="http://placehold.it/730x255" class="img-responsive" alt="">
         <h1>Share the message <a href="#" class="icon facebook"></a><a href="#" class="icon twitter"></a></h1>
         <p class="h1">#DEFENDTHEWINDOW</p>
       </div>
