responsive styles, add share links

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ title: Defend the Window
     <div id="social" class="row">
       <div class="content">
         <img class="img-responsive" src="http://placehold.it/730x255" class="img-responsive" alt="">
-        <h1>Share the message <a href="#" class="icon facebook"></a><a href="#" class="icon twitter"></a></h1>
+        <h1>Share the message <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//defendthewindow.com/" class="icon facebook"></a><a href="https://twitter.com/home?status=http%3A//defendthewindow.com/" class="icon twitter"></a></h1>
         <p class="h1">#DEFENDTHEWINDOW</p>
       </div>
     </div>
