--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@ title: Defend the Window
             <li class="two h2">Protect shared values.</li>
             <li class="three h2">Foster civil discourse.</li>
           </ol>
+        </div>
+        <div class="content">  
           <h1>
             Fight fascism.<br> 
             Resist extremism.<br> 
@@ -40,7 +42,7 @@ title: Defend the Window
     <div class="row">
       <div class="col-xs-12">
         <div class="content">
-          <h1>Get Stickers. Get Involved.</h1>
+          <h1>Get stickers. Get involved.</h1>
           <h2>Spread the message by posting our stickers and poster within your community.</h2>
         </div>
       </div>
@@ -48,7 +50,7 @@ title: Defend the Window
     <div class="row">
       <div class="col-sm-4">
         <div class="content">
-          <p class="text-center"><small>Small Sticker<br>1.73” x 3”</small></p>
+          <p class="text-center"><small>Small Sticker<br>3” x 1.75”</small></p>
           <img class="img-responsive" src="/img/defend.svg" alt="Defend the Window sticker image">
           <div class="text-center">
             <a href="https://www.stickermule.com/marketplace/16734-defend-the-window" class="btn" target="_blank">Buy this sticker</a>
@@ -57,7 +59,7 @@ title: Defend the Window
       </div>
       <div class="col-sm-4">
         <div class="content">
-          <p class="text-center"><small>Large Sticker<br>1.73” x 3”</small></p>
+          <p class="text-center"><small>Large Sticker<br>8” x 4.6”</small></p>
           <img class="img-responsive" src="/img/defend.svg" alt="Defend the Window sticker image">
           <div class="text-center">
             <a href="https://www.stickermule.com/marketplace/16734-defend-the-window" class="btn" target="_blank">Buy this sticker</a>
@@ -65,7 +67,7 @@ title: Defend the Window
           
         </div>
       </div>
-      <div class="col-sm-4">
+      <!-- <div class="col-sm-4">
         <div class="content">
           <p class="text-center"><small>Poster<br>1.73” x 3”</small></p>
           <img class="img-responsive" src="/img/defend.svg" alt="Defend the Window sticker image">
@@ -73,12 +75,12 @@ title: Defend the Window
             <a href="https://www.stickermule.com/marketplace/16734-defend-the-window" class="btn" target="_blank">Buy this poster</a>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
     <div class="row">
       <div class="col-xs-12">
         <div class="content">
-          <p>Click above to purchase stickers and posters. The more you get the cheaper the prices and the wider our reach.</p>
+          <p>Click above to purchase stickers. The more stickers you get, the cheaper the prices and the wider the reach of this campaign.</p>
         </div>
       </div>
     </div>
@@ -89,14 +91,14 @@ title: Defend the Window
     <div class="row">
       <div class="col-xs-12">
         <div class="content">
-          <h1>Download &amp; Print your own.</h1>
+          <h1>Download &amp; print your own.</h1>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-sm-4">
         <div class="content">
-          <p class="text-center"><small>Small Sticker<br>1.73” x 3”</small></p>
+          <p class="text-center"><small>Small Sticker<br>3” x 1.75”</small></p>
           <img class="img-responsive" src="/img/defend.svg" alt="Defend the window">
           <div class="text-center">
             <a href="#" class="btn" target="_blank">Download this sticker</a>
@@ -105,14 +107,14 @@ title: Defend the Window
       </div>
       <div class="col-sm-4">
         <div class="content">
-          <p class="text-center"><small>Large Sticker<br>1.73” x 3”</small></p>
+          <p class="text-center"><small>Large Sticker<br>8” x 4.6”</small></p>
           <img class="img-responsive" src="/img/defend.svg" alt="Defend the window">
           <div class="text-center">
             <a href="#" class="btn" target="_blank">Download this sticker</a>
           </div>
         </div>
       </div>
-      <div class="col-sm-4">
+      <!-- <div class="col-sm-4">
         <div class="content">
           <p class="text-center"><small>Poster<br>1.73” x 3”</small></p>
           <img class="img-responsive" src="/img/defend.svg" alt="Defend the window">
@@ -120,13 +122,18 @@ title: Defend the Window
             <a href="#" class="btn" target="_blank">Download this poster</a>
           </div>
         </div>
+      </div> -->
+    </div>
+    <div id="about">
+      <div class="content">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, illo, expedita neque cumque laboriosam nulla veritatis? Corrupti, ea quisquam corporis accusamus fugit porro esse magni in repellat quae provident facere. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae nam iste odit et veniam sequi, atque facilis, sapiente deserunt sit eum id natus corporis repellendus suscipit assumenda error incidunt consequatur.</p>
       </div>
     </div>
     <div id="social" class="row">
       <div class="content">
-        <img class="img-responsive" src="http://placehold.it/730x255" class="img-responsive" alt="">
-        <h1>Share the message <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//defendthewindow.com/" target="_blank"><span class="icon-facebook"></span></a><a href="https://twitter.com/home?status=Fight%20fascism.%20Resist%20extremism.%20Defend%20the%20window.%0Ahttp%3A//defendthewindow.com/" target="_blank"><span class="icon-twitter"></span ></a></h1>
-        <p class="h1">#DEFENDTHEWINDOW</p>
+        <!-- <img class="img-responsive" src="http://placehold.it/730x255" class="img-responsive" alt=""> -->
+        <h2>Share the message <a href="https://www.facebook.com/sharer/sharer.php?u=http%3A//defendthewindow.com/" target="_blank"><span class="icon-facebook"></span></a><a href="https://twitter.com/home?status=Fight%20fascism.%20Resist%20extremism.%20Defend%20the%20window.%0Ahttp%3A//defendthewindow.com/" target="_blank"><span class="icon-twitter"></span ></a></h1>
+        <p class="h2">#DEFENDTHEWINDOW</p>
       </div>
     </div>
   </div>
