--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ title: Defend the Window
           <p class="text-center"><small>Small Sticker<br>3” x 1.75”</small></p>
           <img class="img-responsive" src="/img/defend.svg" alt="Defend the Window sticker image">
           <div class="text-center">
-            <a href="https://www.stickermule.com/marketplace/16734-defend-the-window" class="btn" target="_blank">Buy this sticker</a>
+            <a href="https://www.stickermule.com/marketplace/16734-defend-the-window" class="btn" target="_blank">Print Professionally</a>
           </div>
         </div>
       </div>
@@ -62,7 +62,7 @@ title: Defend the Window
           <p class="text-center"><small>Large Sticker<br>8” x 4.6”</small></p>
           <img class="img-responsive" src="/img/defend.svg" alt="Defend the Window sticker image">
           <div class="text-center">
-            <a href="https://www.stickermule.com/marketplace/16734-defend-the-window" class="btn" target="_blank">Buy this sticker</a>
+            <a href="https://www.stickermule.com/marketplace/16734-defend-the-window" class="btn" target="_blank">Print Professionally</a>
           </div>
           
         </div>
@@ -80,7 +80,8 @@ title: Defend the Window
     <div class="row">
       <div class="col-xs-12">
         <div class="content">
-          <p>Click above to purchase stickers. The more stickers you get, the cheaper the prices and the wider the reach of this campaign.</p>
+          <p>Click above to professionally print these stickers from our preferred resource, Stickermule. The more stickers you get, the cheaper the prices are and the wider the reach of this campaign.</p>
+          <p>Post up your #DefendtheWindow sticker on the streets, protest signs, on your car, laptop or water bottle. No matter where you display it, you will be standing up and defending the values America was founded on.</p>
         </div>
       </div>
     </div>
@@ -101,7 +102,7 @@ title: Defend the Window
           <p class="text-center"><small>Small Sticker<br>3” x 1.75”</small></p>
           <img class="img-responsive" src="/img/defend.svg" alt="Defend the window">
           <div class="text-center">
-            <a href="#" class="btn" target="_blank">Download this sticker</a>
+            <a href="/img/downloads/overtonwindow-downloadablepdf_small.pdf" class="btn" target="_blank">Download this sticker</a>
           </div>
         </div>
       </div>
@@ -110,7 +111,7 @@ title: Defend the Window
           <p class="text-center"><small>Large Sticker<br>8” x 4.6”</small></p>
           <img class="img-responsive" src="/img/defend.svg" alt="Defend the window">
           <div class="text-center">
-            <a href="#" class="btn" target="_blank">Download this sticker</a>
+            <a href="/img/downloads/overtonwindow-downloadablepdf_large.pdf" class="btn" target="_blank">Download this sticker</a>
           </div>
         </div>
       </div>
@@ -126,7 +127,7 @@ title: Defend the Window
     </div>
     <div id="about">
       <div class="content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, illo, expedita neque cumque laboriosam nulla veritatis? Corrupti, ea quisquam corporis accusamus fugit porro esse magni in repellat quae provident facere. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae nam iste odit et veniam sequi, atque facilis, sapiente deserunt sit eum id natus corporis repellendus suscipit assumenda error incidunt consequatur.</p>
+        <p>America is founded on shared values. These values anchor our debates, shape our laws, and guarantee our freedoms. Together, they make up what's known as the Overton Window: the values that define what it means to be American. Trump is working to shatter this consensus. He represents an unprecedented threat to our way of life. #DefendtheWindow calls on every American to reject the violence, fear, and oppression designed to tear us apart. And to unite in defense of the values that bind us together.</p>
       </div>
     </div>
     <div id="social" class="row">
