--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Defend the Window
         <div class="content">
           <h2>Violence, hate, and oppression have no place in American society</h2>
           <ol class="ol-styled">
-            <li class="one h2">Call out intimidation is all its forms.</li>
+            <li class="one h2">Call out intimidation in all its forms.</li>
             <li class="two h2">Protect shared values.</li>
             <li class="three h2">Foster civil discourse.</li>
           </ol>
